--- a/src/PlayerCard.css
+++ b/src/PlayerCard.css
@@ -9,4 +9,9 @@
     background-color: white;
     text-align: center;
     margin: 10px;
+    padding: 10px;
+  }
+
+  button{
+    background-color: lightgray;
   }
