--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  
+#root{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  row-gap: 20px;
+  column-gap: 20px;
 }
 
 
 .playerList{
-
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  row-gap: 20px;
+  column-gap: 20px;
+  padding: 20px;
 }
