--- a/src/PlayerCard.css
+++ b/src/PlayerCard.css
@@ -6,12 +6,16 @@
     align-items: center;
     position: relative;
     border: solid black 5px;
-    background-color: white;
     text-align: center;
     margin: 10px;
     padding: 10px;
+    background-color: darkgreen;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   }
 
   button{
-    background-color: lightgray;
+    background-color: white;
+    color: black
   }
