--- a/src/PlayerCard.css
+++ b/src/PlayerCard.css
@@ -36,3 +36,20 @@
       outline: 4px auto -webkit-focus-ring-color;
     }
   
+    .favoriteplayerCard{
+      width: 300px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      border: solid black 5px;
+      text-align: center;
+      margin: 10px;
+      padding: 10px;
+      background-color: darkgoldenrod;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+
+    }
