--- a/src/PlayerCard.css
+++ b/src/PlayerCard.css
@@ -1,5 +1,5 @@
 .playerCard{
-    width: 300px;
+    width: 250px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -37,12 +37,14 @@
     }
   
     .favoriteplayerCard{
-      width: 300px;
+      width: 250px;
       height: auto;
       display: flex;
       flex-direction: column;
       align-items: center;
-      position: relative;
+      position: fixed;
+      top: 150px;
+      left: 5px;
       border: solid black 5px;
       text-align: center;
       margin: 10px;
